# worktree-ios-dev-tool

./: .prd-tool.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: README.md
docs/plans/: 2026-04-24-pulse-ios-dev-tool.md
docs/specs/: 2026-04-24-pulse-ios-dev-system.md
docs/superpowers/plans/: 2026-04-28-worktree-ios-dev.md  2026-05-05-worktree-ios-dev-config-split-and-sim-namespace.md
docs/superpowers/specs/: 2026-04-28-worktree-ios-dev-design.md  2026-05-05-worktree-ios-dev-config-split-and-sim-namespace-design.md
prd/: index.xml
prd/project/: configuration.xml
prd/sim/: pick.xml
skills/worktree-ios-dev/: SKILL.md
worktree_ios_dev_tool/: README.md  pyproject.toml
worktree_ios_dev_tool/src/worktree_ios_dev_tool/: __main__.py  boot.py  bootstrap.py  cli.py  config.py  errors.py  packages.py  paths.py  proc.py  proj.py  runapp.py  sim.py  simulator.py  ui.py  xcodebuild.py
worktree_ios_dev_tool/tests/: test_bootstrap.py  test_config_schema.py  test_legacy_config_rejection.py  test_paths.py  test_resolve_sim.py  test_sim_cleanup.py  test_sim_prune.py  test_simulator_helpers.py  test_simulator_naming.py  test_xcodebuild_argv.py
