[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worktree-ios-dev-tool"
version = "0.1.0"
description = "Generic iOS worktree build / simulator / test CLI — per-worktree config, global install."
requires-python = ">=3.11"
dependencies = [
    "tomlkit>=0.13",
    "rich>=13.0",
    "InquirerPy>=0.3.4",
]

[project.scripts]
worktree-ios-dev-tool = "worktree_ios_dev_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/worktree_ios_dev_tool"]
